# MBS5

./: .cproject  .project  CMakeLists.txt  makefile  startall.sh
images/: pat11_flair.mhd  pat11_flair.raw  pat14_flair.mhd  pat14_flair.raw  pat20_flair.mhd  pat20_flair.raw  pat20_flair_output_bin.pgm  pat20_seg_expert1.pgm  pat20_seg_expert2.pgm  pat25_flair.mhd  pat25_flair.raw  pat25_seg_expert1.pgm  pat25_seg_expert2.pgm  pat29_flair.mhd  pat29_flair.raw  pat29_seg_expert1.pgm  pat29_seg_expert2.pgm  pat47_flair.mhd  pat47_flair.raw  pat57_flair.mhd  pat57_flair.raw  test_eros.pgm  test_orig.mhd  test_orig.raw  test_thresh.pgm  test_unsharp.mhd  test_unsharp.raw
src/: BallStructureElement.cpp  BallStructureElement.h  BinaryThresholdFilter.cpp  BinaryThresholdFilter.h  BinomialKernel.cpp  BinomialKernel.h  ClosingFilter.cpp  ClosingFilter.h  ContrastStretchingFilter.cpp  ContrastStretchingFilter.h  ConvolutionFilter.cpp  ConvolutionFilter.h  ConvolutionKernel.cpp  ConvolutionKernel.h  DilationFilter.cpp  DilationFilter.h  ErosionFilter.cpp  ErosionFilter.h  GaussianKernel.cpp  GaussianKernel.h  Image.cpp  Image.h  ImageFilter.cpp  ImageFilter.h  ImageHistogram.cpp  ImageHistogram.h  ImageIO.cpp  ImageIO.h  LaplaceKernel.cpp  LaplaceKernel.h  MIPSegmentationEvaluation.cpp  MIPVentricleSegmentation.cpp  MeanKernel.cpp  MeanKernel.h  OpeningFilter.cpp  OpeningFilter.h  RegionGrowingFilter.cpp  RegionGrowingFilter.h  ShiftScaleFilter.cpp  ShiftScaleFilter.h  (+8 more)
